Add website files

--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<!-- Created By CodingNepal - www.codingnepalweb.com -->
+<html lang="en" dir="ltr">
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DAY - 1</title>
-</head>
+    <title>KIE</title> 
+    <link rel="stylesheet" href="kie.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+   </head>
 <body>
-    <h1>Cyber Security</h1>
-    <h2>Cyber Security</h2>
-    <h3>Cyber Security</h3>
-    <h4>Cyber Security</h4>
-    <h5>Cyber Security</h5>
-    <h6>Cyber Security</h6>
-    <p>
-        <strong>Lorem</strong> <em>ipsum</em> dolor sit amet consectetur adipisicing elit.
-        <!--Dignissimos assumenda suscipit recusandae?
-        Atque necessitatibus ipsam architecto, beatae, quo pariatur nesciunt nulla,<br>blanditiis explicabo cum amet.-->
-    </p>
-    <h2>Compound & Molecular Formula</h2>
-    <strong>Glucose</strong><br>C<sub>6</sub>H<sub>12</sub>O<sub>6</sub><br>
-    <strong>Butane</strong><br>C<sub>4</sub>H<sub>10</sub><br>
-    <strong>Octane</strong><br>C<sub>8</sub>H<sub>18</sub><br>
-    <br>
-    2<sup>2</sup>
-    3<sup>2</sup>
-    4<sup>2</sup> <br>
-    <del>pentonic</del>
-    <img src="logo.png" alt="Image Contains Virus" width="500" height="500" title="Micro Star International">
-    
+  <nav>
+    <div class="menu">
+      <div class="logo">
+        <a href="#">Krafton India eSports</a>
+      </div>
+      <ul>
+        <li><a href="https://esports.battlegroundsmobileindia.com/">Home</a></li>
+        <li><a href="https://www.battlegroundsmobileindia.com/privacy">About</a></li>
+        <li><a href="https://drive.google.com/file/d/1hxBaCF0cGdwMNfGYZNA2OjBNct310tvh/view?usp=sharing" target="_blank">Rule Book</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="img"></div>
+  <div class="center">
+    <div class="title">realme BGIS 2025</div>
+    <div class="sub_title"><h6>realme BGIS 2025 is here, bigger and more intense than ever.</h6></div>
+    <div class="btns">
+      <a href="https://esports.battlegroundsmobileindia.com/ActiveTournaments/BGIS_2025"><button>Tournament</button></a>
+      <a href="https://talhaanwaransari.my.canva.site/kie-teams"><button>Teams</button></a>
+    </div>
+  </div>
 </body>
 </html>
