Update website with new features

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="https://esports.battlegroundsmobileindia.com/">Home</a></li>
         <li><a href="https://www.battlegroundsmobileindia.com/privacy">About</a></li>
         <li><a href="https://drive.google.com/file/d/1hxBaCF0cGdwMNfGYZNA2OjBNct310tvh/view?usp=sharing" target="_blank">Rule Book</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html">Ask</a></li>
         <li><a href="register.html">Register</a></li>
       </ul>
     </div>
