Updated HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="title">realme BGIS 2025</div>
     <div class="sub_title"><h6>realme BGIS 2025 is here, bigger and more intense than ever.</h6></div>
     <div class="btns">
-      <a href="https://esports.battlegroundsmobileindia.com/ActiveTournaments/BGIS_2025"><button>Tournament</button></a>
-      <a href="https://talhaanwaransari.my.canva.site/kie-teams"><button>Teams</button></a>
+      <a href="https://esports.battlegroundsmobileindia.com/ActiveTournaments/BGIS_2025"><button>Tournaments</button></a>
+      <a href="CTSD.html"><button>CTSD</button></a>
     </div>
   </div>
 </body>
