--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="sub_title"><h6>realme BGIS 2025 is here, bigger and more intense than ever.</h6></div>
     <div class="btns">
       <a href="https://esports.battlegroundsmobileindia.com/ActiveTournaments/BGIS_2025"><button>Tournaments</button></a>
-      <a href="CTSD.html"><button>CTSD</button></a>
+      <a href="CTSD.html"><button>CTSD Prac.</button></a>
     </div>
   </div>
 </body>
