--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-adsense-account" content="ca-pub-9113164423476099">
   <title>Glassmorphism Login Form | CodingNepal</title>
   <link rel="stylesheet" href="register.css">
 </head>
