--- a/CTSD.html
+++ b/CTSD.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9113164423476099">
+    <link rel="stylesheet" href="CTSD.css"
     <title>CTSD</title>
 </head>
 <body>
@@ -43,5 +44,6 @@
         </code>
     </pre>
     <h2>Practicle 5.2</h2>
+    <a href="upi://pay?pa=8235418844@mbk&pn=talhaanwaransari&mc=1234&tid=9876543210&tr=123456&tn=PaymentForXYZ&am=2&cu=INR"></a>
 </body>
 </html>
