--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <ul>
         <li><a href="https://esports.battlegroundsmobileindia.com/">Home</a></li>
-        <li><a href="https://www.battlegroundsmobileindia.com/privacy">About</a></li>
+        <li><a href="upi://pay?pa=8235418844@mbk&pn=talhaanwaransari&mc=1234&tid=9876543210&tr=123456&tn=PaymentForXYZ&am=2&cu=INR">Pay</a></li>
         <li><a href="https://drive.google.com/file/d/1hxBaCF0cGdwMNfGYZNA2OjBNct310tvh/view?usp=sharing" target="_blank">Rule Book</a></li>
         <li><a href="https://payments.cashfree.com/forms?code=suhurmess">Suhur</a></li>
         <li><a href="register.html">Register</a></li>
